<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="check_your_network">Check your network settings and try again</string>
    <string name="rationale_title">Permission required</string>
    <string name="rationale_message_location">Location permission is required to show your current location on map</string>
    <string name="ok">OK</string>
    <string name="menu_home">Home</string>

    <!-- Main Screen  -->
    <string name="enter_name">Enter Name</string>
    <string name="info">Info</string>
    <string name="cities">Cities</string>
    <string name="movies">Movies</string>
    <string name="parks">Parks</string>
    <string name="traffic">Traffic</string>
    <string name="music">Music</string>
    <string name="food">Food</string>

    <string name="movie_details">Movie Details</string>
    <string name="director">Director</string>
    <string name="seattle_traffic_cameras">Seattle Traffic Cameras</string>
    <string name="traffic_cam_map">Traffic Cam Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="location">Location</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

</resources>