<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:layout_margin="5dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/info"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnCities"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/cities"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btnMovies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/movies"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnParks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/parks"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btnTraffic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/traffic"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnMusic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/music"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btnFood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/food"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="text"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:maxLength="40"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:maxLength="60"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:maxLength="60"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="70dp"
                android:text="@string/login"
                android:backgroundTint="@color/grey"
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>